[gd_scene load_steps=7 format=3 uid="uid://bq758fkdjfjy"]

[ext_resource type="Script" uid="uid://csp5wek6bovte" path="res://Scripts/player.gd" id="1_vsm5m"]
[ext_resource type="Texture2D" uid="uid://b3bl7vsyl2mtj" path="res://Sprites/kenney_top-down-shooter/PNG/Soldier 1/pixilart-drawing.png" id="2_h0ip6"]
[ext_resource type="AudioStream" uid="uid://noj3uvsjqrrt" path="res://sounds/Som tiro/9mm/WAV/9mm Single.wav" id="3_te2ji"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3nyr"]
radius = 11.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67264"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3jrvr"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("shoot_point")]
collision_layer = 7
script = ExtResource("1_vsm5m")
shoot_point = NodePath("ShootPoint")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_h0ip6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
texture_filter = 1
shape = SubResource("CapsuleShape2D_e3nyr")

[node name="SelfDamage" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_67264")

[node name="Health" type="ProgressBar" parent="SelfDamage"]
unique_name_in_owner = true
modulate = Color(0, 0.937255, 0.0196078, 1)
self_modulate = Color(0.306353, 0.958731, 7.70092e-07, 1)
offset_left = -17.0
offset_top = -29.0
offset_right = 6.0
offset_bottom = -24.0
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3jrvr")

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(28, 8)
stream = ExtResource("3_te2ji")
volume_db = 2.0
playback_type = 1

[node name="Cadencia" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(30, 9)

[connection signal="area_entered" from="SelfDamage" to="." method="_on_self_damage_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cadencia" to="." method="_on_cadencia_timeout"]
